--- a/web/src/styles/Home.module.css
+++ b/web/src/styles/Home.module.css
@@ -6,7 +6,9 @@
   padding: 6rem;
   min-height: 100vh;
 }
-
+body{
+  background-color: black;
+}
 .description {
   display: inherit;
   justify-content: inherit;
